# flocktauri

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: content.js  flockmod.css  flockmod.js  injected.js
src-tauri/src/: main.rs
